# santanator

./: Makefile  Procfile  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
santanator/: asgi.py  settings.py  urls.py  wsgi.py
secret_santa/: apps.py  models.py  views.py
secret_santa/migrations/: 0001_initial.py  0002_auto_20201113_1630.py
secret_santa/templates/: index.html
