[tool.poetry]
name = "santanator"
version = "0.1.0"
description = ""
authors = ["cob16 <public+github@cormacbrady.info>", "elena-vi <elena@madetech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.3"
social-auth-app-django = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
