[tool.poetry]
name = "santanator"
version = "0.1.0"
description = ""
authors = ["cob16 <public+github@cormacbrady.info>", "elena-vi <elena@madetech.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
django = "^3.1.5"
social-auth-app-django = "^4.0.0"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
